force-app/main/default/objects/Inspection_Certification__c/Inspection_Certification__c.object-meta.xml
<CustomObject>
    <label>Managed Items</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Managed Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>