force-app/main/default/objects/Inspection_Certification__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operating</fullName>
                <default>true</default>
                <label>Operating</label>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Weight Indicator</fullName>
            </value>
            <value>
                <fullName>Circulating</fullName>
            </value>
            <value>
                <fullName>Low Pressure</fullName>
            </value>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
            <value>
                <fullName>Self-calibrating</fullName>
                <isActive>false</isActive>
                <label>Self-calibrating</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>