force-app/main/default/objects/Inspection_Certification__c/fields/Cert_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Cert_Expiry_Date__c</fullName>
    <label>Cert Expiry Date</label>
    <type>Date</type>
</CustomField>