force-app/main/default/objects/Inspection_Certification__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <label>Certificate Number (OEM)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>