force-app/main/default/objects/Inspection_Certification__c/fields/Circulating_Iron__c.field-meta.xml
<CustomField>
    <fullName>Circulating_Iron__c</fullName>
    <label>Circulating Iron</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Harlines</fullName>
                <label>Hardlines</label>
            </value>
            <value>
                <fullName>Chicksans</fullName>
            </value>
            <value>
                <fullName>Chicksans Half Swing</fullName>
            </value>
            <value>
                <fullName>Standpipe</fullName>
            </value>
            <value>
                <fullName>Standpipe Dropper</fullName>
            </value>
            <value>
                <fullName>NPT to Wing 1502</fullName>
            </value>
            <value>
                <fullName>NPT to Thread 1502</fullName>
            </value>
            <value>
                <fullName>Double Female</fullName>
            </value>
            <value>
                <fullName>Double Male</fullName>
            </value>
            <value>
                <fullName>Check Valve</fullName>
            </value>
            <value>
                <fullName>Tee Assy</fullName>
            </value>
            <value>
                <fullName>Choke Assy</fullName>
            </value>
            <value>
                <fullName>Plug Valve Assy</fullName>
            </value>
            <value>
                <fullName>Elbow Assy</fullName>
            </value>
            <value>
                <fullName>4 Way Cross Assy</fullName>
            </value>
            <value>
                <fullName>Night Cap Assy</fullName>
            </value>
            <value>
                <fullName>Crossover</fullName>
            </value>
            <value>
                <fullName>Spool</fullName>
            </value>
            <value>
                <fullName>Gate Valve</fullName>
            </value>
            <value>
                <fullName>Hammer Union</fullName>
            </value>
            <value>
                <fullName>Pressure Expansion Chamber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>