force-app/main/default/objects/Inspection_Certification__c/fields/Copy_ID__c.field-meta.xml
<CustomField>
    <fullName>Copy_ID__c</fullName>
    <label>Copy ID #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>