force-app/main/default/objects/Inspection_Certification__c/fields/Date_Last_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Inspection__c</fullName>
    <description>If Managed Item is new (immediately from supplier) put the date in service into this field.  If it has been in stores for longer than 1 year an inspection must be conducted and documented.</description>
    <label>Date Last Inspection</label>
    <type>Date</type>
</CustomField>