force-app/main/default/objects/Inspection_Certification__c/fields/Date_of_Next_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Inspection__c</fullName>
    <formula>Date_Last_Inspection__c +  Interval_days__c</formula>
    <label>Date of Next Inspection</label>
    <type>Date</type>
</CustomField>