force-app/main/default/objects/Inspection_Certification__c/fields/Date_Pre_Charged__c.field-meta.xml
<CustomField>
    <fullName>Date_Pre_Charged__c</fullName>
    <label>Date Pre-Charged</label>
    <type>Date</type>
</CustomField>