force-app/main/default/objects/Inspection_Certification__c/fields/Days_to_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Inspection__c</fullName>
    <formula>Date_of_Next_Inspection__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>