force-app/main/default/objects/Inspection_Certification__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description of Item</label>
    <type>TextArea</type>
</CustomField>