force-app/main/default/objects/Inspection_Certification__c/fields/Disposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Date__c</fullName>
    <inlineHelpText>Item is required to be replaced on this regardless of result of last inspection</inlineHelpText>
    <label>Replacement Date</label>
    <type>Date</type>
</CustomField>