force-app/main/default/objects/Inspection_Certification__c/fields/Distorted_bent__c.field-meta.xml
<CustomField>
    <fullName>Distorted_bent__c</fullName>
    <label>Distorted/bent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>