force-app/main/default/objects/Inspection_Certification__c/fields/Electricial__c.field-meta.xml
<CustomField>
    <fullName>Electricial__c</fullName>
    <label>Electricial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/C Motors</fullName>
            </value>
            <value>
                <fullName>Electrical Commissioning</fullName>
            </value>
            <value>
                <fullName>Main Switch Board</fullName>
            </value>
            <value>
                <fullName>Smoke Detectors</fullName>
            </value>
            <value>
                <fullName>Test n Tag</fullName>
                <default>true</default>
                <label>Test n Tag</label>
            </value>
            <value>
                <fullName>Emergency Lighting</fullName>
            </value>
            <value>
                <fullName>Clamp Meter</fullName>
            </value>
            <value>
                <fullName>Multimeter</fullName>
            </value>
            <value>
                <fullName>Insulation Tester</fullName>
            </value>
            <value>
                <fullName>Hazardous Area</fullName>
            </value>
            <value>
                <fullName>Sound Level Meter</fullName>
            </value>
            <value>
                <fullName>Equipotential Bonding Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>