force-app/main/default/objects/Inspection_Certification__c/fields/Extinguisher_Type__c.field-meta.xml
<CustomField>
    <fullName>Extinguisher_Type__c</fullName>
    <inlineHelpText>Ensure you select the correct type</inlineHelpText>
    <label>Extinguisher Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CO2 - 5kg</fullName>
            </value>
            <value>
                <fullName>Dry Powder 1kg</fullName>
            </value>
            <value>
                <fullName>Dry Power - 1.5kg</fullName>
                <label>Dry Power 1.5kg</label>
            </value>
            <value>
                <fullName>Dry Powder  2kg</fullName>
            </value>
            <value>
                <fullName>Dry Powder 2.5kg</fullName>
            </value>
            <value>
                <fullName>Dry Powder 4.5kg</fullName>
            </value>
            <value>
                <fullName>Dry Powder 9kg</fullName>
            </value>
            <value>
                <fullName>Wet Chemical 2.5kg</fullName>
            </value>
            <value>
                <fullName>Fire Blanket</fullName>
            </value>
            <value>
                <fullName>CO2 - 6kg</fullName>
            </value>
            <value>
                <fullName>Wet Chemical - 2kg</fullName>
            </value>
            <value>
                <fullName>Wet Chemical - 7kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>