force-app/main/default/objects/Inspection_Certification__c/fields/Fit_Together_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Fit_Together_Correctly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fit Together Correctly?</label>
    <type>Checkbox</type>
</CustomField>