force-app/main/default/objects/Inspection_Certification__c/fields/Gauges__c.field-meta.xml
<CustomField>
    <fullName>Gauges__c</fullName>
    <label>Gauges</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pressure Gauge</fullName>
            </value>
            <value>
                <fullName>Kane Instruments Weight Indicator</fullName>
            </value>
            <value>
                <fullName>Digital Crystal Gauge</fullName>
            </value>
            <value>
                <fullName>Accumulator Pressure Gauge</fullName>
            </value>
            <value>
                <fullName>Annular Pressure Gauge</fullName>
            </value>
            <value>
                <fullName>Manifold Pressure Gauge</fullName>
            </value>
            <value>
                <fullName>Rig Smart Systems</fullName>
            </value>
            <value>
                <fullName>Rod Tong Pressure Gauge</fullName>
            </value>
            <value>
                <fullName>Rig Smart Weight Indicator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>