force-app/main/default/objects/Inspection_Certification__c/fields/Hose__c.field-meta.xml
<CustomField>
    <fullName>Hose__c</fullName>
    <label>Hose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOP Hose</fullName>
            </value>
            <value>
                <fullName>Kelly Hose</fullName>
            </value>
            <value>
                <fullName>Power Swivel Hose</fullName>
            </value>
            <value>
                <fullName>Power Tong Hose</fullName>
            </value>
            <value>
                <fullName>Pressure Test Unit Hose</fullName>
            </value>
            <value>
                <fullName>Hand Pump Hose</fullName>
            </value>
            <value>
                <fullName>Fuel Hose</fullName>
            </value>
            <value>
                <fullName>Shock Hose</fullName>
            </value>
            <value>
                <fullName>Rig Hydraulic Hose</fullName>
            </value>
            <value>
                <fullName>Hydraulic Suction Hose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>