force-app/main/default/objects/Inspection_Certification__c/fields/Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Inspected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspected By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Inspection_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>