force-app/main/default/objects/Inspection_Certification__c/fields/Inspection_Record__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Record__c</fullName>
    <label>Inspection Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lifting Equipment Inspection</fullName>
            </value>
            <value>
                <fullName>Soft Sling Inspection</fullName>
            </value>
            <value>
                <fullName>Wire Cable Inspection</fullName>
            </value>
            <value>
                <fullName>Hose Inspection</fullName>
            </value>
            <value>
                <fullName>Electrical Inspection</fullName>
            </value>
            <value>
                <fullName>Webbing Equipment Inspection</fullName>
            </value>
            <value>
                <fullName>3rd Party Inspection</fullName>
            </value>
            <value>
                <fullName>Other Inspection + WD Form</fullName>
            </value>
            <value>
                <fullName>Turnbuckle/Shackle Inspection</fullName>
            </value>
            <value>
                <fullName>Fire Extinguisher Inspection</fullName>
            </value>
            <value>
                <fullName>Gauge Calibration Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>