force-app/main/default/objects/Inspection_Certification__c/fields/Inspection_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Requirement__c</fullName>
    <label>Inspection Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Month Unit Manager</fullName>
            </value>
            <value>
                <fullName>3 Month Unit Manager</fullName>
            </value>
            <value>
                <fullName>6 month Unit Manager</fullName>
            </value>
            <value>
                <fullName>12 month Unit Manager</fullName>
            </value>
            <value>
                <fullName>2 year Unit Manager</fullName>
            </value>
            <value>
                <fullName>3 year Unit Manager</fullName>
            </value>
            <value>
                <fullName>6 month 3rd party</fullName>
            </value>
            <value>
                <fullName>12 month 3rd party</fullName>
            </value>
            <value>
                <fullName>2 year 3rd party</fullName>
            </value>
            <value>
                <fullName>3 year 3rd party</fullName>
            </value>
            <value>
                <fullName>4 year 3rd Party</fullName>
            </value>
            <value>
                <fullName>4.5 year 3rd Party</fullName>
            </value>
            <value>
                <fullName>5 year 3rd Party</fullName>
            </value>
            <value>
                <fullName>12 year 3rd Party</fullName>
            </value>
            <value>
                <fullName>Annual NDT - Cat IV</fullName>
                <label>As per NDT Inspection - Cat IV</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>1 Month 3rd Party</fullName>
            </value>
            <value>
                <fullName>2.5 Yrs 3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>