force-app/main/default/objects/Inspection_Certification__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breathing Apparatus</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Fire Extinguisher</fullName>
            </value>
            <value>
                <fullName>First Aid Kits</fullName>
            </value>
            <value>
                <fullName>Food Licence</fullName>
            </value>
            <value>
                <fullName>Gas Detector</fullName>
            </value>
            <value>
                <fullName>Gauge</fullName>
            </value>
            <value>
                <fullName>Inertia Line</fullName>
            </value>
            <value>
                <fullName>Monthly Water Tests</fullName>
            </value>
            <value>
                <fullName>NDT Calibration</fullName>
            </value>
            <value>
                <fullName>Quarterly Water Treatment (Bomb)</fullName>
            </value>
            <value>
                <fullName>Safe Load Permit</fullName>
            </value>
            <value>
                <fullName>Tong Inspection</fullName>
            </value>
            <value>
                <fullName>Hatch Integrity Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>