force-app/main/default/objects/Inspection_Certification__c/fields/Interval_days__c.field-meta.xml
<CustomField>
    <fullName>Interval_days__c</fullName>
    <label>Inspection Interval (days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>