force-app/main/default/objects/Inspection_Certification__c/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <inlineHelpText>This is the date the last inspection occurred on this item (the date on the certificate that is attached..)</inlineHelpText>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>