force-app/main/default/objects/Inspection_Certification__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <label>Licence #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>