force-app/main/default/objects/Inspection_Certification__c/fields/Lifting_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Equipment__c</fullName>
    <label>Lifting Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 Leg Lifting Chain</fullName>
                <label>Double Lifting Chain-3mth</label>
            </value>
            <value>
                <fullName>Winch Line Chain</fullName>
                <label>Winch Chain-3mth</label>
            </value>
            <value>
                <fullName>Sling</fullName>
                <label>Soft Sling-3mth</label>
            </value>
            <value>
                <fullName>Stinger Hold Back Chain</fullName>
                <label>Stinger Hold Back Chain-12mth</label>
            </value>
            <value>
                <fullName>Single Leg Chain</fullName>
                <label>Single Lifting Chain-6mth</label>
            </value>
            <value>
                <fullName>BOP Lifting Chain</fullName>
                <label>Manual Tong Chain-12mth</label>
            </value>
            <value>
                <fullName>Turnbuckle - 12mth</fullName>
                <label>Turnbuckle-12mth</label>
            </value>
            <value>
                <fullName>D Shackle</fullName>
                <label>Shackle-12mth</label>
            </value>
            <value>
                <fullName>2 piece Bow Shackle-12mth</fullName>
            </value>
            <value>
                <fullName>2 piece D Shackle-12mth</fullName>
            </value>
            <value>
                <fullName>4 piece Bow Shackle-12mth</fullName>
            </value>
            <value>
                <fullName>4 piece D Shackle-12mth</fullName>
            </value>
            <value>
                <fullName>Winch</fullName>
            </value>
            <value>
                <fullName>Three Leg Lifting Chain – 12mth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>