force-app/main/default/objects/Inspection_Certification__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Identify where the extinguisher is located on the asset</inlineHelpText>
    <label>Location on Asset/Site</label>
    <type>TextArea</type>
</CustomField>