force-app/main/default/objects/Inspection_Certification__c/fields/Next_Detailed_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Next_Detailed_Inspection__c</fullName>
    <description>2 Yearly Detailed Inspection</description>
    <label>Next Detailed Inspection</label>
    <type>Date</type>
</CustomField>