force-app/main/default/objects/Inspection_Certification__c/fields/Next_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection__c</fullName>
    <inlineHelpText>Date that item/certification expires and requires renewal</inlineHelpText>
    <label>Next Inspection Date</label>
    <type>Date</type>
</CustomField>