force-app/main/default/objects/Inspection_Certification__c/fields/Pre_Charge_Bottles__c.field-meta.xml
<CustomField>
    <fullName>Pre_Charge_Bottles__c</fullName>
    <label>Pre-Charge Bottles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pulsation Dampener Nitrogen Accumulator</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #1</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #2</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #3</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #4</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #5</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #6</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #7</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #8</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #9</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #10</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #11</fullName>
            </value>
            <value>
                <fullName>Accumulator Unit #12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>