force-app/main/default/objects/Inspection_Certification__c/fields/Pressure_Relief_Valve__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Relief_Valve__c</fullName>
    <label>Pressure Relief Valve</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mud Pump Relief Valve</fullName>
            </value>
            <value>
                <fullName>Rig Air Start Receiver Tank</fullName>
            </value>
            <value>
                <fullName>Mud Pump Air Start Receiver Tank</fullName>
            </value>
            <value>
                <fullName>Rig Air Pressure Relief</fullName>
            </value>
            <value>
                <fullName>Mud Pump Pressure Relief</fullName>
            </value>
            <value>
                <fullName>Air Compressor Relief</fullName>
            </value>
            <value>
                <fullName>Koomie Relief Valve</fullName>
            </value>
            <value>
                <fullName>Pressure Testing Unit</fullName>
            </value>
            <value>
                <fullName>Mud Tank Relief Valve</fullName>
            </value>
            <value>
                <fullName>Air Pack Trailer Air Manifold Tank</fullName>
            </value>
            <value>
                <fullName>Pop Off Valve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>