force-app/main/default/objects/Inspection_Certification__c/fields/Reason_made_Obselete__c.field-meta.xml
<CustomField>
    <fullName>Reason_made_Obselete__c</fullName>
    <inlineHelpText>If items is discarded/sold change status to obselete and provide an explanation</inlineHelpText>
    <label>If Status Obselete Provide Reason</label>
    <type>TextArea</type>
</CustomField>