force-app/main/default/objects/Inspection_Certification__c/fields/Results_Comments__c.field-meta.xml
<CustomField>
    <fullName>Results_Comments__c</fullName>
    <label>Results / Comments</label>
    <type>TextArea</type>
</CustomField>