force-app/main/default/objects/Inspection_Certification__c/fields/Safety_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Safety_Equipment__c</fullName>
    <label>Safety Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working At Heights</fullName>
            </value>
            <value>
                <fullName>Working At Heights Rescue Kit</fullName>
            </value>
            <value>
                <fullName>Confined Space Rescue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Well Control Equipment</fullName>
            </value>
            <value>
                <fullName>Gas Detector</fullName>
            </value>
            <value>
                <fullName>First Aid Kit</fullName>
            </value>
            <value>
                <fullName>Link Bracket</fullName>
            </value>
            <value>
                <fullName>Harness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>