force-app/main/default/objects/Inspection_Certification__c/fields/Third_Party_Inspection_Due__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Inspection_Due__c</fullName>
    <label>Third Party Inspection Due</label>
    <type>Date</type>
</CustomField>