force-app/main/default/objects/Inspection_Certification__c/fields/Turnbuckle_ID_No__c.field-meta.xml
<CustomField>
    <fullName>Turnbuckle_ID_No__c</fullName>
    <inlineHelpText>(matched to cert)</inlineHelpText>
    <label>Turnbuckle ID No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>