force-app/main/default/objects/Inspection_Certification__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Tests were conducted at this unit.</inlineHelpText>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Managed Items</relationshipLabel>
    <relationshipName>Managed_Items</relationshipName>
    <type>Lookup</type>
</CustomField>